@@ -8,55 +8,51 @@
 
 package org.dita.dost.util;
 
-import org.junit.Test;
+import static java.util.Arrays.asList;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
-
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
-import static org.junit.Assert.*;
+import org.junit.jupiter.api.Test;
 
 public class LangUtilsTest {
 
-    @Test
-    public void pair() {
-        final Map.Entry<String, String> act = LangUtils.pair("left", "right");
-        assertEquals("left", act.getKey());
-        assertEquals("right", act.getValue());
-    }
+  @Test
+  public void pair() {
+    final Map.Entry<String, String> act = LangUtils.pair("left", "right");
+    assertEquals("left", act.getKey());
+    assertEquals("right", act.getValue());
+  }
 
-    @Test
-    public void pair_null() {
-        final Map.Entry<String, String> act = LangUtils.pair(null, null);
-        assertEquals(null, act.getKey());
-        assertEquals(null, act.getValue());
-    }
+  @Test
+  public void pair_null() {
+    final Map.Entry<String, String> act = LangUtils.pair(null, null);
+    assertEquals(null, act.getKey());
+    assertEquals(null, act.getValue());
+  }
 
-    @Test
-    public void zipWithIndex() {
-        final List<String> src = asList("first", "second");
-        final List<Map.Entry<String, Integer>> act = LangUtils.zipWithIndex(src).collect(toList());
-        assertEquals("first", act.get(0).getKey());
-        assertEquals(0, act.get(0).getValue().intValue());
-        assertEquals("second", act.get(1).getKey());
-        assertEquals(1, act.get(1).getValue().intValue());
-    }
+  @Test
+  public void zipWithIndex() {
+    final List<String> src = asList("first", "second");
+    final List<Map.Entry<String, Integer>> act = LangUtils.zipWithIndex(src).toList();
+    assertEquals("first", act.get(0).getKey());
+    assertEquals(0, act.get(0).getValue().intValue());
+    assertEquals("second", act.get(1).getKey());
+    assertEquals(1, act.get(1).getValue().intValue());
+  }
 
-    @Test
-    public void zipWithIndex_null() {
-        final List<String> src = new ArrayList<>();
-        src.add(null);
-        final List<Map.Entry<String, Integer>> act = LangUtils.zipWithIndex(src).collect(toList());
-        assertEquals(null, act.get(0).getKey());
-        assertEquals(0, act.get(0).getValue().intValue());
-    }
+  @Test
+  public void zipWithIndex_null() {
+    final List<String> src = new ArrayList<>();
+    src.add(null);
+    final List<Map.Entry<String, Integer>> act = LangUtils.zipWithIndex(src).toList();
+    assertEquals(null, act.get(0).getKey());
+    assertEquals(0, act.get(0).getValue().intValue());
+  }
 
-    @Test
-    public void zipWithIndex_empty() {
-        final List<String> src = Collections.emptyList();
-        final List<Map.Entry<String, Integer>> act = LangUtils.zipWithIndex(src).collect(toList());
-        assertTrue(act.isEmpty());
-    }
+  @Test
+  public void zipWithIndex_empty() {
+    final List<String> src = Collections.emptyList();
+    final List<Map.Entry<String, Integer>> act = LangUtils.zipWithIndex(src).toList();
+    assertTrue(act.isEmpty());
+  }
 }
